ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 32400 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p tcp --dport 32400 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 3005 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p tcp --dport 3005 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 5353 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p udp --dport 5353 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 8324 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p tcp --dport 8324 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 32410:32414 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p udp -m multiport --dports 32410:32414 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 1900 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p udp --dport 1900 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 32469 0.0.0.0/0 any 0.0.0.0/0 plexmediaserver-all - in
-A ufw-user-input -p tcp --dport 32469 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow any 1978 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1978 -j ACCEPT
-A ufw-user-input -p udp --dport 1978 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 Apache - in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT -m comment --comment 'dapp_Apache'

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
