ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 32400 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p tcp --dport 32400 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 3005 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p tcp --dport 3005 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 5353 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p udp --dport 5353 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 8324 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p tcp --dport 8324 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 32410:32414 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p udp -m multiport --dports 32410:32414 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow udp 1900 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p udp --dport 1900 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow tcp 32469 ::/0 any ::/0 plexmediaserver-all - in
-A ufw6-user-input -p tcp --dport 32469 -j ACCEPT -m comment --comment 'dapp_plexmediaserver-all'

### tuple ### allow any 1978 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 1978 -j ACCEPT
-A ufw6-user-input -p udp --dport 1978 -j ACCEPT

### tuple ### allow tcp 80 ::/0 any ::/0 Apache - in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT -m comment --comment 'dapp_Apache'

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
